--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "typeahead.js": "~0.10.5",
+    "jquery-ui": "~1.11.2"
   }
 }
